    their values updated by the closure argument; while not strictly
    necessary, this extra constraint should force any use of each function
    to be more predictable and easier to implement.

    * (Basics.pod, Types.pod, Routines.pod, QRelation.pod, QSet.pod)  A few
    minor description updates or fixes.

    * (README, D.pm)  Added mentions of Set::Relation in SUPPORT/FORUMS.

2009-01-19  Darren Duncan <perl@DarrenDuncan.net>

    * Muldis::D version 0.58.0 is released on CPAN as
    Muldis-D-0.58.0.tar.gz.

    * This release features a set of smaller language enhancements that
    were inspired during development of the module Set::Relation version
    0.0.0 for Perl 5.  These 2 releases were made in tandem.

    * (PTMD_Tiny.pod)  Renamed the grammar token "nc_elem_sep" to
    "name_chain_elem_sep" and refactored it to embed optional whitespace.

    * (Basics.pod, Routines_Catalog.pod)  A few minor fixes.

    * (Routines.pod, QRelation.pod)  Updated the 4 routines
    ["sys.std.Core.QRelation.((|assign_)extension|summary)",
    "sys.std.QRelation.map"] to add a "attrs" parameter; this is necessary
    in the general case where the "topic" parameter may have zero q/tuples,
    meaning the function that would otherwise define the added/result attrs
    wouldn't be invoked and said new attributes are not otherwise known.

    * (Routines.pod, QRelation.pod)  Added 1 routine
    "sys.std.Core.QTuple.static_extension" (dyadic version of "product"),
    renamed "sys.std.Core.QTuple.assign_product" to
    "assign_static_extension" (and its param "other" to "attrs"), and
    renamed "sys.std.QRelation.outer_join_with_product" to
    "outer_join_with_static_extension"; the new names are easier to
    understand, and the name "product" is saved for just N-adic operators.
    Also renamed the "sys.std.QRelation.composition" parameters from
    "r1|r2" to "topic|other".

    * (QRelation.pod)  Added the 2 new relational operators