@@ -437,9 +437,9 @@ Darren Duncan (C<perl@DarrenDuncan.net>)
 
 =head1 LICENSE AND COPYRIGHT
 
-This file is part of the Muldis::D framework.
+This file is part of the formal specification of the Muldis D language.
 
-Muldis::D is Copyright © 2002-2009, Darren Duncan.
+Muldis D is Copyright © 2002-2009, Muldis Data Systems, Inc.
 
 See the LICENSE AND COPYRIGHT of L<Muldis::D> for details.
 
