@@ -23,6 +23,10 @@
 
     * (README, D.pm)  Added mentions of Set::Relation in SUPPORT/FORUMS.
 
+    * Updated all files with a "LICENSE AND COPYRIGHT" documentation
+    section to change the Copyright declaration from "Darren Duncan" to
+    "Muldis Data Systems, Inc." (which is wholly owned by Darren Duncan).
+
 2009-01-19  Darren Duncan <perl@DarrenDuncan.net>
 
     * Muldis::D version 0.58.0 is released on CPAN as
